This file documents the revision history for the Monitoring Webinterface Thruk.

1.56     not yet released
          - added naglint tool to beautify nagios config files
          - show perf bar for percentages too
          - reports:
            - replace links in html reports
            - fixed creating e-mail reports for availability pages
            - fixed sending first e-mail attachment always as report.pdf
          - config tool:
            - added object browser
            - show warning when saving objects without a name
            - recognize disabled (commented) objects
          - Bug Fixes
            - fixed limit to groups in alert summary

1.54     Mon Oct 22 15:08:26 CEST 2012
          - added support for setting custum variables without _ now
          - added link to all services with same name on extinfo 2 page
          - panorama view:
            - added performance bar to host/service list
          - Bug Fixes
            - undefined ARG macros will be replaced with empty string
            - fixed perf bars in IE
            - fixed perf bars growing over maximum

1.52     Tue Oct  9 16:44:04 CEST 2012
          - added cookie based authentication and logout button
          - added performance bar to host/service list
          - updated calendar popup
            - use mousewheel to change date / time
          - Bug Fixes
            - fixed scrolling to top on clicking calendar icon

1.50     Thu Sep 27 09:21:20 CEST 2012
          - make menu sections foldable
          - Bug Fixes
            - fixed reload in IE
            - fixed minemap header in IE

1.48     Fri Sep 21 11:24:48 CEST 2012
          - save scroll state on sending commands and reloads
          - reports
            - added basic report option validation
          - Bug Fixes
            - fixed state hosts (Oliver Falk)
            - fixed search with ipad
            - fixed action icons by custom vars servicegroup overview
