@@ -10013,29 +10013,35 @@ peer
 <div class="ulist"><ul>
 <li>
 <p>
-name      name for this connection
+name     name for this connection
 </p>
 </li>
 <li>
 <p>
-type      type of this connection. Only <em>livestatus</em> possible at the
+type     type of this connection. Only <em>livestatus</em> possible at the
                      moment
 </p>
 </li>
 <li>
 <p>
-hidden    should this peer be hidden initially ( can be reenabled
+hidden   should this peer be hidden initially ( can be reenabled
                      via gui switch ) Only useful with more than one
                      backend.
 </p>
 </li>
 <li>
 <p>
-groups    if set, only contacts from these groups have access. You
+groups   if set, only contacts from these groups have access. You
                      may add multiple groups seperated by comma. Users
                      without the right contactgroup don&#8217;t even see
                      that there is a backend. Note that this implies
                      one extra backend request per page.
+</p>
+</li>
+<li>
+<p>
+section  to group backends/sites by different sections, enter a
+                     section.
 </p>
 </li>
 <li>
@@ -10714,7 +10720,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-10-30 22:41:26 CEST
+Last updated 2012-11-06 12:38:30 CEST
 </div>
 </div>
 </body>
