@@ -1,0 +1,63 @@
+[% up = 0; disabled = 0; down = 0; %]
+[% BLOCK site %]
+    <div class='backend' style="[% style %]">
+      [% SET name  = 'unknown'                                         %]
+      [% SET name = backend_detail.$pd.name IF backend_detail.$pd.name %]
+
+      [% SET class = 'button_peerDOWN'                                    %]
+      [% SET class = 'button_peerUP'  IF backend_detail.$pd.running       %]
+      [% SET class = 'button_peerDIS' IF backend_detail.$pd.disabled == 2 %][%# hidden by user #%]
+      [% SET class = 'button_peerHID' IF backend_detail.$pd.disabled == 3 %][%# hidden by backend param #%]
+      [% SET class = 'button_peerHID' IF param_backend && pd != param_backend %]
+      [% SET class = 'button_peerDIS' IF backend_detail.$pd.disabled == 6 %]
+      [% SET class = 'button_peerUP'  IF backend_detail.$pd.disabled == 7 %]
+      <input type="button" id='button_[% pd %]' class="[% class %]" value="[% name %]" title="[% IF backend_detail.$pd.last_error %][% escape_js(backend_detail.$pd.last_error) %][% ELSE %][% name %][% END %]" onMouseOver="button_over(this)" onMouseOut="button_out(this)" onClick="toggleBackend('[% pd %]')"[% IF backend_detail.$pd.disabled == 5 %] disabled[% END %]>
+      [% IF class == 'button_peerUP'   %][% up       = up       + 1 %][% END %]
+      [% IF class == 'button_peerHID'  %][% disabled = disabled + 1 %][% END %]
+      [% IF class == 'button_peerDIS'  %][% disabled = disabled + 1 %][% END %]
+      [% IF class == 'button_peerDOWN' %][% down     = down     + 1 %][% END %]
+    </div>
+[% END %]
+
+<table border=0 cellpadding=0 cellspacing=0>
+  <tr>
+    <td>
+    [% IF hide_backends_chooser == 0 && c.db.sections.keys.size > 1 %]
+    [% popup = BLOCK %]
+    <div id="site_panel" style="position: fixed; z-index: 5000; top: 35px; left: 195px; display: none;">
+    <div class="shadow"><div class="shadowcontent">
+    <table cellspacing=2 cellpadding=0 width="100%" style="background: #F0F1EE; border: 1px solid black; padding: 5px;">
+        <tr>
+            <th colspan=2>Choose your sites</th>
+        </tr>
+        <tr>
+            [% FOREACH section IN c.db.sections.keys.sort %]
+            <th>[% section %]</th>
+            [% END %]
+        </tr>
+        <tr>
+            [% FOREACH section IN c.db.sections.keys.sort %]
+            <td valign="top">
+            [% FOREACH bname IN c.db.sections.$section.keys.sort %]
+                [% pd = c.db.sections.$section.$bname.key %]
+                [% PROCESS site style="clear: both;" %]
+            [% END %]
+            </td>
+            [% END %]
+        </tr>
+    </table>
+    </div></div>
+    </div>
+    [% END %]
+      <input type="button" class="[% IF up > 0 %]button_peerUP[% ELSE %]button_peerDIS[% END %]" value="[% up %] up"         onMouseOver="button_over(this)" onMouseOut="button_out(this)" onClick="toggleElement('site_panel')">[%
+    %]<input type="button" class="button_peerDIS" value="[% disabled %] disabled" onMouseOver="button_over(this)"            onMouseOut="button_out(this)" onClick="toggleElement('site_panel')">[%
+    %]<input type="button" class="[% IF down > 0 %]button_peerDOWN[% ELSE %]button_peerDIS[% END %]" value="[% down %] down" onMouseOver="button_over(this)" onMouseOut="button_out(this)" onClick="toggleElement('site_panel')">
+    [% popup %]
+    [% ELSIF hide_backends_chooser == 0 %]
+    [% FOREACH pd IN backends %]
+        [% PROCESS site style="" %]
+    [% END %]
+    [% END %]
+    </td>
+  </tr>
+</table>
